# ms-backend-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.sh
examples/ms-frontend-clang/: CMakeLists.txt  build.sh
examples/ms-frontend-rust/: Cargo.toml
examples/ms-frontend-rust/src/: main.rs  types.rs
scenarios/ms-iot-plat/src/: main.cc
scenarios/ms-nonweb-plat/config/: ms_backend_wasm.wasi.wasm  wasm_backend_tvm.wasi.wasm  wasm_backend_tvm.wasm  wasm_kernelcompiler_tvm.wasi.wasm
scenarios/ms-nonweb-plat/wasm-dlfrontend-tvm/: Cargo.toml
scenarios/ms-nonweb-plat/wasm-dlfrontend-tvm/src/: main.rs
scenarios/ms-nonweb-plat/wasm-dlfrontend-tvm/tools/: synset.csv
scenarios/ms-nonweb-plat/wasm-frontend/: Cargo.toml
scenarios/ms-nonweb-plat/wasm-frontend-tvm/: Cargo.toml
scenarios/ms-nonweb-plat/wasm-frontend-tvm/src/: main.rs  types.rs
scenarios/ms-nonweb-plat/wasm-frontend/src/: main.rs  types.rs  utils.rs
scenarios/ms-nonweb-plat/wasm-graphfrontend/: Cargo.toml
scenarios/ms-nonweb-plat/wasm-graphfrontend/src/: types.rs
scenarios/ms-nonweb-plat/wasm-kernelfrontend/: Cargo.toml
scenarios/ms-nonweb-plat/wasm-kernelfrontend/src/: main.rs
scenarios/ms-web-plat/: index.html  package.json  webpack.config.js
scenarios/ms-web-plat/config/: inputs.json
scenarios/ms-web-plat/pkg/: package.json  wasm_backend_web.d.ts  wasm_backend_web.js  wasm_backend_web_bg.d.ts  wasm_backend_web_bg.js  wasm_backend_web_bg.wasm
scenarios/ms-web-plat/src/: jquery-1.4.4.min.js  osc_runtime_bundler.js  wasm_frontend_web.js
scenarios/ms-web-plat/wasm-backend-web/: Cargo.toml  build.sh
scenarios/ms-web-plat/wasm-backend-web/src/: lib.rs
scenarios/ms-web-plat/wasm-backend-web/src/ops/: add.rs  equal_count.rs  mod.rs  mul.rs  reshape.rs  types.rs
src/: lib.rs  main.cc  utils.rs
src/ops/: add.rs  argmax.rs  equal_count.rs  inverse.rs  mod.rs  mul.rs  reshape.rs  types.rs  utils.rs
wasm-backend-tvm/: Cargo.toml  README.md  build.rs
wasm-backend-tvm/src/: lib.rs  utils.rs
wasm-backend-tvm/src/ops/: add.rs  div.rs  mod.rs  sub.rs  types.rs
wasm-backend-tvm/tools/: build_ops_lib.py
wasm-backend-web/: Cargo.toml  build.sh
wasm-backend-web/src/: utils.rs
wasm-backend-web/src/ops/: add.rs  argmax.rs  equal_count.rs  mul.rs  reshape.rs  types.rs
wasm-dlbackend-tvm/: Cargo.toml  build.rs
wasm-dlbackend-tvm/src/: lib.rs  main.rs  types.rs
wasm-dlbackend-tvm/tools/: build_graph_lib.py
wasm-frontend/: Cargo.toml
wasm-frontend/config/: ms_backend_wasm.wasm
wasm-graphcompiler-tvm/: Cargo.toml  README.md  build.rs
wasm-graphcompiler-tvm/.cargo/: config
wasm-graphcompiler-tvm/src/: lib.rs  types.rs  utils.rs
wasm-graphcompiler-tvm/tools/: build_graph_lib.py
wasm-graphcompiler-tvm/wasm-graphcompiler/: Cargo.toml
wasm-graphcompiler-tvm/wasm-graphcompiler/tools/: build_graph_lib.py
wasm-graphcompiler-tvm/wasm-graphruntime/: Cargo.toml
wasm-graphcompiler-tvm/wasm-graphruntime/src/: main.rs  runtime.rs  types.rs
wasm-kernelcompiler-tvm/: Cargo.toml  README.md  build.rs
wasm-kernelcompiler-tvm/.cargo/: config
wasm-kernelcompiler-tvm/src/: lib.rs
wasm-kernelcompiler-tvm/src/ops/: add.rs  sub.rs  types.rs
wasm-kernelcompiler-tvm/tools/: build_ops_lib.py
wasm-kernelcompiler-tvm/wasm-kernelcompiler/: Cargo.toml  build.rs
wasm-kernelcompiler-tvm/wasm-kernelcompiler/.cargo/: config
wasm-kernelcompiler-tvm/wasm-kernelcompiler/src/ops/: sub.rs  types.rs
wasm-kernelcompiler-tvm/wasm-kernelcompiler/tools/: build_ops_lib.py
wasm-kernelcompiler-tvm/wasm-kernelruntime/: Cargo.toml
wasm-kernelcompiler-tvm/wasm-kernelruntime/config/: wasm_kernelcompiler_tvm.wasi.wasm  wasm_kernelcompiler_tvm.wasm
wasm-kernelcompiler-tvm/wasm-kernelruntime/src/: main.rs  runtime.rs
wasm-standalone-tvm/: README.md
wasm-standalone-tvm/wasm-graph/: Cargo.toml  README.md  build.rs
wasm-standalone-tvm/wasm-graph/src/: lib.rs  types.rs  utils.rs
wasm-standalone-tvm/wasm-graph/tools/: build_graph_lib.py
wasm-standalone-tvm/wasm-kernel/: Cargo.toml  README.md  build.rs
wasm-standalone-tvm/wasm-kernel/src/: lib.rs  utils.rs
wasm-standalone-tvm/wasm-kernel/src/ops/: add.rs  mod.rs  sub.rs  types.rs
wasm-standalone-tvm/wasm-runtime/: Cargo.toml
wasm-standalone-tvm/wasm-runtime/src/: graph.rs  kernel.rs  lib.rs  types.rs
wasm-standalone-tvm/wasm-runtime/tests/test_graph_resnet50/: Cargo.toml
wasm-standalone-tvm/wasm-runtime/tests/test_graph_resnet50/src/: main.rs
wasm-standalone-tvm/wasm-runtime/tests/test_kernels/: Cargo.toml
wasm-standalone-tvm/wasm-runtime/tests/test_kernels/src/: main.rs
