[package]
name = "wasm-dlbackend-tvm"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"
description = "WebAssembly backend to MindSpore deep learning framework using TVM"
readme = "README.md"
repository = "https://github.com/leonwanghui/ms-backend-wasm"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "tvm"]

[package.metadata]
wasm-opt = true
wasm-name-section = false
wasm-producers-section = false

[profile.release]
lto = true
opt-level = 's'

[dependencies]
serde = "1.0.53"
serde_json = "1.0.53"
ndarray = "0.12"
tvm-runtime = { version = "0.1", path = "../third_party/tvm/rust/runtime" }

[build-dependencies]
ar = "0.6"
