[package]
name = "wasm-graphruntime"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"
description = "WebAssembly graph runtime to deep learning frameworks using wasmtime"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "wasmtime"]

[dependencies]
wasmtime = "0.18.0"
wasmtime-wasi = "0.18.0"
anyhow = "1.0.31"
serde = "1.0.53"
serde_json = "1.0.53"
serde_derive = "1.0.53"
getopts = "0.2.21"
ndarray = "0.12"
csv = "1.1"
image = "0.20"
