[package]
name = "wasm-kernelcompiler-tvm"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"
description = "WebAssembly kernel compiler to deep learning frameworks using TVM"
readme = "README.md"
repository = "https://github.com/leonwanghui/ms-backend-wasm"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "tvm"]

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ['cdylib']

[dependencies]
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.53"
ndarray = "0.12"
tvm-common = { version = "0.1", path = "../../third_party/tvm/rust/common" }
tvm-runtime = { version = "0.1", path = "../../third_party/tvm/rust/runtime" }
