[package]
name = "wasm-kernelruntime"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"
description = "WebAssembly kernel runtime to deep learning frameworks using wasmtime"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "wasmtime"]

[dependencies]
wasmtime = "0.16.0"
wasmtime-wasi = "0.16.0"
anyhow = "1.0.31"
serde = "1.0.53"
serde_json = "1.0.53"
serde_derive = "1.0.53"
getopts = "0.2.21"
ndarray = "0.12"
