[package]
name = "wasm-frontend-tvm"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"

[dependencies]
wasmtime = "0.17.0"
wasmtime-wasi = "0.17.0"
anyhow = "1.0.30"
serde = "1.0.53"
serde_json = "1.0.53"
serde_derive = "1.0.53"
getopts = "0.2.21"
ndarray = "0.12"
